<resources>
    <string name="app_name">Popular Movies</string>
    <string name="problem_with_movies">There was a problem showing the movies</string>
    <string name="release_date">Release Date: </string>
    <string name="overview">Overview</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="cast_unavailable">Cast Unavailable</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="error_retrieving_movies">Error Retrieving Movies</string>
    <string name="error_retrieving_movie_data">Error Retrieving Movie Data</string>
    <string name="error_retrieving_cast_data">Error Retrieving Cast Info</string>
    <string name="no_internet">No Network Connection</string>
    <string name="videos">Videos</string>
    <string name="videos_unavailable">Videos unavailable</string>

    <string name="reviews_unavailable">Reviews unavailable</string>
    <string name="reviews">Reviews</string>
    <string name="by">-</string>
    <string name="read_full_review">READ FULL REVIEW</string>

    <string name="no_favorites">No Favorites Added</string>
    <string name="remove_favorites">Removed from Favorites</string>
    <string name="add_favorites">Added to Favorites</string>
    <string name="go_to_favorites">Go to Favorites</string>
    <string name="rating">Rating: </string>
    <string name="error_adding_fav">"Didn't work! Movie not added to favorites"</string>
    <string name="error_removing_fav">"Didn't work! Movie not removed from favorites"</string>
</resources>
