<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292847"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            tools:ignore="ContentDescription"
            android:background="#292847"
            android:alpha="0.8" />



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linear_layout_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:divider="@drawable/shapes"
            android:orientation="vertical"
            android:padding="8dp"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:elevation="2dp"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.example.android.popularmovies.utils.PosterImageView
                        android:id="@+id/poster"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="4dp">

                            <TextView
                                android:id="@+id/title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                android:layout_alignParentLeft="true"
                                android:layout_toLeftOf="@+id/fav_button"/>

                            <ImageView
                                android:id="@+id/fav_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/release_date" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="4dp"
                                android:text="@string/rating" />

                            <TextView
                                android:id="@+id/rating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp" />
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:padding="16dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/overview_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textColor="#333333"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#333333"
                        android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/top_billed_cast"
                        android:textColor="#333333"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <GridView
                        android:id="@+id/cast_grid_view"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:horizontalSpacing="18dp"
                        android:numColumns="3"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="18dp"
                        />

                    <TextView
                        android:id="@+id/cast_empyt_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:text="@string/cast_unavailable"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:paddingBottom="8dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/videos"
                        android:textColor="#333333"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <GridView
                        android:id="@+id/video_grid_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:columnWidth="100dp"
                        android:horizontalSpacing="4dp"
                        android:numColumns="auto_fit"
                        android:paddingBottom="8dp"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="4dp" />

                    <TextView
                        android:id="@+id/video_empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:text="@string/videos_unavailable"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="0dp"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/reviews"
                        android:textColor="#333333"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/review_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/review_empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:text="@string/reviews_unavailable"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </FrameLayout>


</ScrollView>